<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.HomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/header_view_rel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_56"
        app:cardElevation="@dimen/margin_10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_56"
            android:elevation="@dimen/margin_10">

            <TextView
                android:id="@+id/header_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/back_rel"
                android:text="@string/struct"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_18"
                android:textColor="@color/black"
                android:paddingLeft="@dimen/margin_20"/>

            <RelativeLayout
                android:id="@+id/back_rel"
                android:layout_width="@dimen/margin_50"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/margin_18"
                    android:layout_height="@dimen/margin_18"
                    android:src="@drawable/ic_back"
                    android:tint="@color/gray"
                    android:clickable="false"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/powered_by_consultancy"
        android:layout_below="@+id/header_view_rel"
        android:paddingLeft="@dimen/margin_10"
        android:paddingRight="@dimen/margin_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/free_struct_consultancy_rel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_80"
                    android:elevation="@dimen/margin_5"
                    android:background="@color/white"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10">

                    <TextView
                        android:id="@+id/free_struct_consultancy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:gravity="center_horizontal"
                        android:clickable="false"
                        android:textSize="@dimen/text_16"
                        android:layout_marginTop="@dimen/margin_5"
                        android:text="@string/free_struct_consultancy"/>

                    <TextView
                        android:id="@+id/free_struct_consultancy_desc"
                        android:layout_below="@+id/free_struct_consultancy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/text_14"
                        android:clickable="false"
                        android:paddingLeft="@dimen/margin_5"
                        android:paddingRight="@dimen/margin_5"
                        android:layout_marginTop="@dimen/margin_5"
                        android:text="@string/free_struct_consultancy_desc"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/struct_consultancy_rel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_80"
                    android:elevation="@dimen/margin_5"
                    android:background="@color/white"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_below="@+id/free_struct_consultancy_rel">

                    <TextView
                        android:id="@+id/struct_consultancy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:clickable="false"
                        android:textSize="@dimen/text_16"
                        android:text="@string/struct_consultancy"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/x_rel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_80"
                    android:elevation="@dimen/margin_5"
                    android:background="@color/white"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_below="@+id/struct_consultancy_rel">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:clickable="false"
                        android:textSize="@dimen/text_16"
                        android:text="XXXXXXXXXXXXXXXXXX"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/img_rel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/margin_5"
                    android:background="@color/white"
                    android:layout_marginTop="@dimen/margin_30"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_below="@+id/x_rel">

                    <LinearLayout
                        android:id="@+id/li_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_100"
                        android:elevation="@dimen/margin_5"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:weightSum="4"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <View
                                android:layout_width="1px"
                                android:layout_height="match_parent"
                                android:background="@color/gray"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="@dimen/margin_10"
                                android:layout_marginRight="@dimen/margin_10"/>
                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <View
                                android:layout_width="1px"
                                android:layout_height="match_parent"
                                android:background="@color/gray"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="@dimen/margin_10"
                                android:layout_marginRight="@dimen/margin_10"/>
                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <View
                                android:layout_width="1px"
                                android:layout_height="match_parent"
                                android:background="@color/gray"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="@dimen/margin_10"
                                android:layout_marginRight="@dimen/margin_10"/>
                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                        </RelativeLayout>


                    </LinearLayout>

                    <View
                        android:id="@+id/li_view"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/gray"
                        android:layout_below="@+id/li_1"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginBottom="@dimen/margin_10"/>

                    <LinearLayout
                        android:id="@+id/li_2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_100"
                        android:elevation="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_below="@+id/li_view"
                        android:weightSum="4"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <View
                                android:layout_width="1px"
                                android:layout_height="match_parent"
                                android:background="@color/gray"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="@dimen/margin_10"
                                android:layout_marginRight="@dimen/margin_10"/>
                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <View
                                android:layout_width="1px"
                                android:layout_height="match_parent"
                                android:background="@color/gray"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="@dimen/margin_10"
                                android:layout_marginRight="@dimen/margin_10"/>
                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <View
                                android:layout_width="1px"
                                android:layout_height="match_parent"
                                android:background="@color/gray"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="@dimen/margin_10"
                                android:layout_marginRight="@dimen/margin_10"/>
                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                        </RelativeLayout>


                    </LinearLayout>

                </RelativeLayout>


            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <TextView
        android:id="@+id/powered_by_consultancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_12"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/power_by_struct_international"/>

</RelativeLayout>